Fix alignment of email in session header
This closes #3.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -143,6 +143,10 @@ $nav-height: 6rem;
   }
 }
 
+.row.nav .session-email {
+  vertical-align: inherit;
+}
+
 .row.title {
   background: transparent;
   margin-bottom: 1rem;
